{
    "name": "MasterInput",
    "maps": [
        {
            "name": "Camera",
            "id": "c9b9d6bd-d024-49d4-aa70-def69c2e4bcd",
            "actions": [
                {
                    "name": "PanMovement",
                    "type": "PassThrough",
                    "id": "20efa1d0-1296-41cf-8122-a19fb96d2c98",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PanEnabled",
                    "type": "Button",
                    "id": "e89dd109-ddf1-47ad-b4b9-0d085cf98dca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "afeec72d-1ec6-4e55-ad98-95815bc68264",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cdd82f9-c12b-4ac4-9c00-55999aaa0129",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0d91e0b-31a1-4adc-8025-7e801cfd3e20",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanEnabled",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed784005-1ee7-42e5-9abc-bb49deaac455",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TurretPlacer",
            "id": "cb034907-4e65-4163-98f4-e08dab13c577",
            "actions": [
                {
                    "name": "PlaceTurret",
                    "type": "Button",
                    "id": "4331df4f-c759-43cd-b8dd-fc298dec71ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlacerPosition",
                    "type": "PassThrough",
                    "id": "17a3b205-ea68-4dcc-b725-f49e508ba339",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b310c457-997c-4190-ab25-616854e50c76",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0caf8c84-3236-4335-997f-6c563f343c04",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlacerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}